--- a/src/App.css
+++ b/src/App.css
@@ -90,6 +90,7 @@ ul li {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  color: black;
 }
 
 ul li div {
@@ -98,4 +99,60 @@ ul li div {
 
 ul li button {
   margin-left: 10px;
+}
+
+.home{
+  background-image: url('/src/assets/Home.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
+  color: white;
+}
+.employee{
+  background-image: url('/src/assets/Employee.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
+  color: white;
+}
+.table{
+  background-image: url('/src/assets/Table.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
+  color: white;
+}
+.reservation{
+  background-image: url('/src/assets/Reservation.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
+  color: white;
+}
+.order{
+  background-image: url('/src/assets/Order.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
+  color: white;
+}
+.home h1,
+.employee h1,
+.table h1
+.order h1,
+.reservation h1{
+  color: white;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.employee h1{
+  margin-top: 10px;
 }
